get section rest call

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,12 @@
 
 <body>
     <div class="main">
+        <input type="button" value="Post Data" id="postData" />
         <input type="button" value="Get Data" id="getData" />
         <div id="container"></div>
     </div>
-    
-    
+
+
   <script src="js/script.js"></script>
 </body>
 </html>
