added employee get services

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,12 @@
 
 <body>
     <div class="main">
-        <input type="button" value="Post Data" id="postData" />
-        <input type="button" value="Get Data" id="getData" />
-        <div id="container"></div>
+        <input type="button" value="Post Section Data" id="postSectionData" />
+        <input type="button" value="Get Section Data" id="getSectionData" />
+        <input type="button" value="Get All Employee Data" id="getAllEmployeeData" />
+        <input type="button" value="Get Employee Data By Id" id="getEmployeeDataById" />
+        <div id="sectionContainer"></div>
+        <div id="employeeContainer"></div>
     </div>
 
 
