added new web services

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,17 @@
         <input type="button" value="Get Section Data" id="getSectionData" />
         <input type="button" value="Get All Employee Data" id="getAllEmployeeData" />
         <input type="button" value="Get Employee Data By Id" id="getEmployeeDataById" />
+        <input type="button" value="Insert Score" id="insertScore" />
+        <input type="button" value="Get All Individual Score For All Employees" id="getAllIndividualScoreForAllEmployees" />
+        <input type="button" value="Get All Individual Score By Employee Id"
+        id="getAllIndividualScoreByEmployeeId" />
+        <input type="button" value="Get Individual Score By Id For Employee Id"
+        id="getIndividualScoreByIdForEmployeeId" />
+        <input type="button" value="Get Overall Score For All Employees" id="getOverallScoreForAllEmployees" />
+        <input type="button" value="Get Overall Score by Employee Id" id="getOverallScoreByEmployeeId" />
         <div id="sectionContainer"></div>
         <div id="employeeContainer"></div>
+        <div id="scoreContainer"></div>
     </div>
 
 
