--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Appraisal score</title>
   <meta name="description" content="Appraisal score">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="src/assets/css/style.css">
 
 </head>
 
@@ -31,6 +31,6 @@
     </div>
 
 
-  <script src="js/script.js"></script>
+  <script src="src/assets/js/script.js"></script>
 </body>
 </html>
